# password-generator

./: pyproject.toml
password_generator/: __main__.py
