[tool.poetry]
name = "password-generator"
version = "0.1.0"
description = ""
authors = ["Eliaz Bobadilla <ultirequiem@pm.me>"]
readme = "README.md"
packages = [{include = "password_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.8.0"
pysimplegui = "^4.60.4"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
rope = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
